Added an email input

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<title>Git it</title>
 	</head>
 	<body>
-		<h3>Git it</h3>
+		<h3>Git it</h3
+		<div>
+			<label>Email</label>
+			<input type="text" name="email" />
+		</div>
 	</body>
 </html>
